--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "test:e2e": "playwright test",
+    "test": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix",
@@ -16,7 +16,6 @@
   "dependencies": {
     "@babel/types": "^7.24.6",
     "@heroicons/vue": "^2.0.13",
-    "@tailwindcss/forms": "^0.5.3",
     "@types/marked": "^4.0.8",
     "@vueuse/core": "^9.9.0",
     "@mdi/font": "7.4.47",
@@ -34,14 +33,17 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@babel/types": "^7.24.7",
     "@playwright/test": "^1.48.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.17.0",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.1.1",
     "@vue/tsconfig": "^0.5.1",
+    "@types/lodash-es": "^4.17.6",
     "eslint": "^9.13.0",
     "eslint-plugin-playwright": "^2.0.0",
     "eslint-plugin-vue": "^9.29.0",
@@ -50,6 +52,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "typescript": "~5.6.0",
