--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ coverage
 
 test-results/
 playwright-report/
+.eslintrc-auto-import.json
+src/auto-imports.d.ts
+src/components.d.ts
+src/typed-router.d.ts
