--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,8 @@
   },
   "include": [
     "src/**/*",
-    "src/**/*.vue",
-    "src/typed-router.d.ts"
-, "e2e"  ],
+    "src/**/*.vue"
+  ],
   "exclude": ["dist", "node_modules", "cypress"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
