--- a/package.json
+++ b/package.json
@@ -1,43 +1,72 @@
 {
-  "name": "app-drunagor-front",
+  "name": "druna_front",
   "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "test": "playwright test",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/"
   },
   "dependencies": {
+    "@babel/types": "^7.24.6",
+    "@heroicons/vue": "^2.0.13",
+    "@types/marked": "^4.0.8",
+    "@vueuse/core": "^9.9.0",
     "@mdi/font": "7.4.47",
+    "marked": "^4.3.0",
+    "nanoid": "^4.0.2",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.11"
+    "pinia": "^2.2.4",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.6.11",
+    "primevue": "^3.51.0",
+    "primeicons": "^7.0.0",
+    "vue-i18n": "^9.10.2",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@babel/types": "^7.24.7",
-    "@types/node": "^20.14.10",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
+    "@playwright/test": "^1.48.1",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.17.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vue/eslint-config-prettier": "^10.0.0",
+    "@vue/eslint-config-typescript": "^14.1.1",
+    "@vue/tsconfig": "^0.5.1",
+    "@types/lodash-es": "^4.17.6",
+    "eslint": "^9.13.0",
+    "eslint-plugin-playwright": "^2.0.0",
+    "eslint-plugin-vue": "^9.29.0",
     "eslint-config-vuetify": "^1.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "pinia": "^2.1.7",
-    "sass": "1.77.6",
-    "typescript": "^5.4.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "npm-run-all2": "^7.0.1",
+    "prettier": "^3.3.3",
+    "typescript": "~5.6.0",
+    "autoprefixer": "^10.4.13",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
+    "postcss": "^8.4.20",
     "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.3.3",
-    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite": "^5.4.10",
+    "vite-plugin-vue-devtools": "^7.5.3",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-router": "^4.4.0",
-    "vue-tsc": "^2.0.26"
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "sass": "1.77.6",
+    "vue-tsc": "^2.1.6"
   }
 }
