--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,9 @@
   },
   "include": [
     "src/**/*",
-    "src/**/*.vue"
-  ],
+    "src/**/*.vue",
+    "src/typed-router.d.ts"
+, "e2e"  ],
   "exclude": ["dist", "node_modules", "cypress"],
   "references": [{ "path": "./tsconfig.node.json" }],
 }
