--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "js-md5": "^0.7.3",
     "@babel/types": "^7.24.6",
     "@heroicons/vue": "^2.0.13",
     "@mdi/font": "7.4.47",
     "@types/marked": "^4.0.8",
     "@vueuse/core": "^9.9.0",
+    "axios": "^1.7.9",
     "core-js": "^3.37.1",
     "lodash-es": "^4.17.21",
     "marked": "^4.3.0",
@@ -29,6 +31,7 @@
     "primevue": "^3.51.0",
     "roboto-fontface": "*",
     "vue": "^3.5.12",
+    "vue-axios": "^3.5.2",
     "vue-i18n": "^9.10.2",
     "vue-router": "^4.4.5",
     "vuetify": "^3.6.11"
