--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "js-md5": "^0.7.3",
     "@babel/types": "^7.24.6",
     "@heroicons/vue": "^2.0.13",
     "@mdi/font": "7.4.47",
@@ -23,6 +22,8 @@
     "@vueuse/core": "^9.9.0",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "jose": "^5.9.6",
+    "js-md5": "^0.7.3",
     "lodash-es": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^4.0.2",
