--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "skipLibCheck": true
