--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@vueuse/core": "^9.9.0",
     "axios": "^1.7.9",
     "core-js": "^3.37.1",
+    "d3": "^7.9.0",
     "jose": "^5.9.6",
     "js-md5": "^0.7.3",
     "lodash-es": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^4.0.2",
     "pinia": "^2.2.4",
+    "plotly.js-dist": "^3.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
     "roboto-fontface": "*",
