--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^20.17.0",
+    "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.1.1",
