feat(interactions): new subtitle in reservoir interaction

--- a/src/data/book/interactionConfigurations.json
+++ b/src/data/book/interactionConfigurations.json
@@ -19,7 +19,7 @@
   },
   "https://qr1.be/LPF2": {
     "title": "INTERACTION – THE RESERVOIR",
-    "subtitle": "Against all odds, there is a subterranean reservoir beneath Blackriver’s fortress.Did the population know about these dungeons? Did the Count? The purpose of this dam is unclear, but the ropes coming out of the stone and wrapping around a wheel-like mechanism clearly indicate that it controls the water level.",
+    "subtitle": "Against all odds, there is a subterranean reservoir beneath Blackriver’s fortress.Did the population know about these dungeons? Did the Count? The purpose of this dam is unclear, but the ropes coming out of the stone and wrapping around a wheel-like mechanism clearly indicate that it controls the water level.<br><br><hr><br><b>GAME MECHANIC – DRAINAGE</b><br>Place the Drainage Game Mechanic card at the bottom end of the Initiative Track, just above the Rune card, with face B up.<br><br><b>RULE – MECHANISM INTERACTION</b><br>This Interaction does not have real Charges. Instead, unless a resolution states otherwise, it remains on the board. In addition, the options for this Interaction are not exclusive—They can be repeated, and sometimes the game state will lead to different outcomes.",
     "backgroundImportName": "ReservoirImg",
     "itemsImportName": "InteractionTheReservoir"
   },
