--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.10",
+    "vite-plugin-pwa": "^1.0.3",
     "vite-plugin-vue-devtools": "^7.5.3",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
