fix(interaction): change "tha barricade" name

--- a/src/data/book/interactionConfigurations.json
+++ b/src/data/book/interactionConfigurations.json
@@ -1,6 +1,6 @@
 {
   "https://qr1.be/WMJL": {
-    "title": "INTERACTION 1 - THE VILLAGERS’ BARRICADE",
+    "title": "INTERACTION 1 - THE BARRICADE",
     "subtitle": "Wary of the fortress, the villagers improvised barricades using old planks, broken furniture, and any junk they could get their hands on to stop the night raids. But the structure is unstable, and pushing it to the other side may be the safest thing for you to do, but the sounds of battle and indistinguishable screams that echo from the other side reveal that you are not alone…",
     "backgroundImportName": "BarricadeImg",
     "itemsImportName": "InteractionBarricade"
