--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
     "roboto-fontface": "*",
+    "shepherd.js": "^14.5.1",
     "vue": "^3.5.12",
     "vue-axios": "^3.5.2",
     "vue-i18n": "^9.10.2",
