--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "primevue": "^3.51.0",
     "roboto-fontface": "*",
     "shepherd.js": "^14.5.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.12",
     "vue-axios": "^3.5.2",
     "vue-i18n": "^9.10.2",
