Revert "Merge pull request #582 from CGS-WEBSITES/hotfix/visual-updates-for-season-2"
This reverts commit 3cc3fccb637ff9aa03fc6269dc70bbacbe741c04, reversing
changes made to 1d26aa4192d242ccdfbf3bf1c9b1f9b093559b0b.

--- a/src/data/book/interactionConfigurations.json
+++ b/src/data/book/interactionConfigurations.json
@@ -38,37 +38,37 @@
   "https://qr1.be/Y4aZP": {
     "title": "INTERACTION 7 - THE PRISONER",
     "subtitle": "A man's agony becomes a test of your resolve.",
-    "backgroundImportName": "PrisonerImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionThePrisoner"
   },
   "https://qr1.be/23V7": {
     "title": "INTERACTION 8 - THE SEED FROM ANOTHER WORLD",
     "subtitle": "A mysterious cube emanates dark energy and whispers promises of power.",
-    "backgroundImportName": "SeedImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionTheSeed"
   },
   "https://qr1.be/8F0X": {
     "title": "INTERACTION 9 - THE FORGOTTEN FORGE",
     "subtitle": "The dungeons hold another surprise: a giant forge, of dwarven architecture, lies cold in the dark.",
-    "backgroundImportName": "ForgeImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionTheForge"
   },
   "https://qr1.be/9G1Y": {
     "title": "INTERACTION 10 - DRACONIAN ALTAR",
     "subtitle": "A statue of Narang’Erel, the altruistic goddess, awaits a sacrifice to be reborn.",
-    "backgroundImportName": "AltarImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionDraconianAltar"
   },
   "https://qr1.be/3A5D": {
     "title": "INTERACTION 11 - THE FANTASTIC BEER FACTORY",
     "subtitle": "A miraculous beer factory, empowered by magic, awaits its master brewer.",
-    "backgroundImportName": "BeerImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionBeerFactory"
   },
   "https://qr1.be/5T8Z": {
     "title": "INTERACTION 12 - THE RUNIC CIRCLE",
     "subtitle": "Engravings of a runic circle decorate the cold stone slabs, large enough to accommodate even a dragon.",
-    "backgroundImportName": "RunicImg",
+    "backgroundImportName": "GargoyleImg",
     "itemsImportName": "InteractionTheRunic"
   }
 }
