--- a/src/data/book/interactionConfigurations.json
+++ b/src/data/book/interactionConfigurations.json
@@ -35,37 +35,37 @@
     "backgroundImportName": "TreasuresImg",
     "itemsImportName": "InteractionTreasuresOfAForgottenAge"
   },
-  "https://qr1.be/Y4aZP": {
+  "interaction02.01": {
     "title": "INTERACTION 7 - THE PRISONER",
     "subtitle": "A man's agony becomes a test of your resolve.",
     "backgroundImportName": "PrisonerImg",
     "itemsImportName": "InteractionThePrisoner"
   },
-  "https://qr1.be/23V7": {
+  "interaction02.02": {
     "title": "INTERACTION 8 - THE SEED FROM ANOTHER WORLD",
     "subtitle": "A mysterious cube emanates dark energy and whispers promises of power.",
     "backgroundImportName": "SeedImg",
     "itemsImportName": "InteractionTheSeed"
   },
-  "https://qr1.be/8F0X": {
+  "interaction02.03": {
     "title": "INTERACTION 9 - THE FORGOTTEN FORGE",
     "subtitle": "The dungeons hold another surprise: a giant forge, of dwarven architecture, lies cold in the dark.",
     "backgroundImportName": "ForgeImg",
     "itemsImportName": "InteractionTheForge"
   },
-  "https://qr1.be/9G1Y": {
+  "interaction02.04": {
     "title": "INTERACTION 10 - DRACONIAN ALTAR",
     "subtitle": "A statue of Narang’Erel, the altruistic goddess, awaits a sacrifice to be reborn.",
     "backgroundImportName": "AltarImg",
     "itemsImportName": "InteractionDraconianAltar"
   },
-  "https://qr1.be/3A5D": {
+  "interaction02.05": {
     "title": "INTERACTION 11 - THE FANTASTIC BEER FACTORY",
     "subtitle": "A miraculous beer factory, empowered by magic, awaits its master brewer.",
     "backgroundImportName": "BeerImg",
     "itemsImportName": "InteractionBeerFactory"
   },
-  "https://qr1.be/5T8Z": {
+  "interaction02.06": {
     "title": "INTERACTION 12 - THE RUNIC CIRCLE",
     "subtitle": "Engravings of a runic circle decorate the cold stone slabs, large enough to accommodate even a dragon.",
     "backgroundImportName": "RunicImg",
