--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "plotly.js-dist": "^3.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
+    "qrcode-vue3": "^1.7.1",
     "roboto-fontface": "*",
     "shepherd.js": "^14.5.1",
     "socket.io-client": "^4.8.1",
