feat(interaction): change seed to cube

--- a/src/data/book/interactionConfigurations.json
+++ b/src/data/book/interactionConfigurations.json
@@ -50,7 +50,7 @@
   },
   "interaction02.02": {
     "id": "interaction02.02",
-    "title": "INTERACTION 8 - THE SEED FROM ANOTHER WORLD",
+    "title": "INTERACTION 8 - THE CUBE FROM ANOTHER WORLD",
     "subtitle": "A mysterious cube emanates dark energy and whispers promises of power.",
     "backgroundImportName": "SeedImg",
     "itemsImportName": "InteractionTheSeed"
