--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3": "^7.9.0",
     "jose": "^5.9.6",
     "js-md5": "^0.7.3",
+    "jspdf": "^4.0.0",
     "lodash-es": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^4.0.2",
@@ -35,6 +36,7 @@
     "plotly.js-dist": "^3.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
+    "qrcode": "^1.5.4",
     "qrcode-vue3": "^1.7.1",
     "roboto-fontface": "*",
     "shepherd.js": "^14.5.1",
