--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@babel/types": "^7.24.6",
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/ios": "^8.0.2",
     "@fontsource/cinzel": "^5.1.1",
     "@fontsource/poppins": "^5.1.1",
     "@heroicons/vue": "^2.0.13",
