--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.24.7",
+    "@capacitor/assets": "^3.0.5",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@playwright/test": "^1.48.1",
     "@rushstack/eslint-patch": "^1.2.0",
