update(packs): npm update and automatic browser list update

--- a/package.json
+++ b/package.json
@@ -86,5 +86,11 @@
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-tsc": "^2.1.6"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
